# iBuild_plinko

./: .env  .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
contracts/: .dockerignore  Cargo.toml  README.md  TEST_GUIDE.md  build.sh  build_release.sh  deploy.sh  test.sh
contracts/contracts/plink-token/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/contracts/plinko-game/: Cargo.toml
contracts/contracts/plinko-game/src/: contract.rs  error.rs  leaderboard.rs  lib.rs  msg.rs  multipliers.rs  rng.rs  state.rs  tests.rs
contracts/contracts/purchase-contract/: Cargo.toml
contracts/contracts/purchase-contract/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/plink-token/: Cargo.toml
contracts/plink-token/src/: contract.rs  msg.rs  tests.rs
contracts/plinko-game/: Cargo.toml
contracts/plinko-game/src/: contract.rs  error.rs  lib.rs  msg.rs  rng.rs  state.rs  tests.rs
contracts/purchase-contract/: Cargo.toml
contracts/purchase-contract/src/: contract.rs  error.rs  tests.rs
src/: App.tsx  index.css
src/components/: ContractStatus.tsx  GameControls.tsx  GameHistory.tsx  GameStatsPanel.tsx  Leaderboard.tsx  NetworkDisplay.tsx  PlinkoBoard.tsx  PurchaseModal.tsx  UserStatsPanel.tsx  Wallet.tsx  WalletConnect.tsx
src/config/: contracts.ts  multipliers.ts
src/hooks/: useContracts.ts  usePlinkoGame.ts  useWallet.ts  useWindowWidth.ts
src/services/: contractService.ts
src/types/: game.ts
src/utils/: format.ts
