[workspace]
members = [
    "contracts/plink-token",
    "contracts/purchase-contract",
    "contracts/plinko-game",
]

resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw20 = "1.1.2"
cw20-base = "1.1.2"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[workspace.dependencies.cosmwasm-std-test]
package = "cosmwasm-std"
version = "1.5.0"
features = ["stargate", "staking"]