[package]
name = "plink-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.16.5"
