[package]
name = "plinko-game"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = "2.2.2"
cw-storage-plus = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.56"
sha2 = "0.10.8"
ed25519-zebra = "4.1.0"

[dev-dependencies]
cw-multi-test = "2.2.0"
